[gd_scene format=3 uid="uid://or7wm76ksuql"]

[ext_resource type="Script" uid="uid://mlmecfxt8gfq" path="res://scripts/add_choice_popup.gd" id="1_gfqty"]
[ext_resource type="Script" uid="uid://dw2rixb4owx6l" path="res://scripts/main_screen.gd" id="1_jx6g1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jx6g1"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.078431375, 0.09803922, 0.13333334, 1)
border_color = Color(0.16470589, 0.18431373, 0.22745098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lweib"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.078431375, 0.09803922, 0.13333334, 1)
border_color = Color(0.16470589, 0.18431373, 0.22745098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1j64x"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.078431375, 0.09803922, 0.13333334, 1)
border_color = Color(0.16470589, 0.18431373, 0.22745098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainScreen" type="Control" unique_id=1693348589]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jx6g1")

[node name="RootRow" type="HBoxContainer" parent="." unique_id=1645693174]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "This is to create a side by side. Left will be scrollable list right will be buttons."
theme_override_constants/separation = 12

[node name="PaddingLeftPanel" type="MarginContainer" parent="RootRow" unique_id=35777003]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="LeftPanel" type="VBoxContainer" parent="RootRow/PaddingLeftPanel" unique_id=1001105656]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ChoicesLabel" type="Label" parent="RootRow/PaddingLeftPanel/LeftPanel" unique_id=1532229034]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Choices"
horizontal_alignment = 1

[node name="ChoicesList" type="ItemList" parent="RootRow/PaddingLeftPanel/LeftPanel" unique_id=1648634248]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="PaddingRightPanel" type="MarginContainer" parent="RootRow" unique_id=114596105]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="RightPanel" type="VBoxContainer" parent="RootRow/PaddingRightPanel" unique_id=1248807355]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="AddButton" type="Button" parent="RootRow/PaddingRightPanel/RightPanel" unique_id=548259280]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jx6g1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_lweib")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_1j64x")
text = "ADD"

[node name="RemoveButton" type="Button" parent="RootRow/PaddingRightPanel/RightPanel" unique_id=413762920]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jx6g1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jx6g1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jx6g1")
text = "REMOVE"

[node name="DecideButton" type="Button" parent="RootRow/PaddingRightPanel/RightPanel" unique_id=1898174153]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_vertical = 3
text = "DECIDE"

[node name="AddChoicePopUp" type="ConfirmationDialog" parent="." unique_id=2141068506]
oversampling_override = 1.0
title = "Add A Choice"
initial_position = 1
size = Vector2i(200, 201)
ok_button_text = "Confirm"
dialog_hide_on_ok = false
script = ExtResource("1_gfqty")

[node name="DialogLayout" type="VBoxContainer" parent="AddChoicePopUp" unique_id=1891708966]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="OptionLabel" type="Label" parent="AddChoicePopUp/DialogLayout" unique_id=795585265]
layout_mode = 2
text = "Option:"

[node name="OptionInput" type="LineEdit" parent="AddChoicePopUp/DialogLayout" unique_id=1596890530]
layout_mode = 2
size_flags_vertical = 3

[node name="WeightLabel" type="Label" parent="AddChoicePopUp/DialogLayout" unique_id=1153634963]
layout_mode = 2
text = "Weight:"

[node name="WeightInput" type="LineEdit" parent="AddChoicePopUp/DialogLayout" unique_id=868524533]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "1"
alignment = 1

[node name="WeightErrorPopUp" type="AcceptDialog" parent="AddChoicePopUp/DialogLayout" unique_id=384024062]
oversampling_override = 1.0
title = "Invalid Weight!"
position = Vector2i(0, 36)
size = Vector2i(280, 100)
dialog_text = "Weight must be a positive integer."

[node name="ResultPopUp" type="AcceptDialog" parent="." unique_id=89337128]
title = "Decision"

[connection signal="text_submitted" from="AddChoicePopUp/DialogLayout/OptionInput" to="AddChoicePopUp" method="_on_option_input_text_submitted"]
[connection signal="text_submitted" from="AddChoicePopUp/DialogLayout/WeightInput" to="AddChoicePopUp" method="_on_weight_input_text_submitted"]
